# agentic-browser

./: .env.example  .gitignore  BACKEND.md  MEMORY.md  README.md  check_ollama.py  docker-compose.yml  main.py  memory.doc.md  package-lock.json  pnpm-lock.yaml  pyproject.toml
agents/: __init__.py  react_agent.py  react_tools.py  tool_eventing.py  while_loop_harness.py
api/: __init__.py  main.py  run.py
app/: main.py  run.py
core/: __init__.py  config.py  crypto.py  db.py  llm.py  migrations.py
debug/: index.html  package.json  patch_modal.js  pnpm-lock.yaml
extension/: .env.example  .gitignore  AGENT_SYSTEM_GUIDE.md  ARCHITECTURE.md  ENV_SETUP.md  GETTING_STARTED.md  GITHUB_OAUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  WEBSOCKET_SETUP.md  backend_service.py  chat-example.md  requirements.txt  wxt.config.ts
mcp_server/: __init__.py  server.py
memory/: __init__.py  service.py
migrations/: 0001_app_state.py  0002_universal_agent_backend.py  0003_memory_postgres_indexes.py  __init__.py
models/: __init__.py  memory.py  yt.py
prompts/: __init__.py  browser_use.py  github.py  memory.py  prompt_injection_validator.py  react.py  website.py  youtube.py
routers/: __init__.py  auth.py  automation.py  browser_runtime.py  browser_use.py  calendar.py  conversations.py  debug.py  file_upload.py  github.py  gmail.py  google_search.py  health.py  integrations.py  pyjiit.py  react_agent.py  skills.py  state.py  voice.py  website.py  website_validator.py  youtube.py
scratch/: new_handle_delete.tsx
scripts/: migrate_localstorage_to_postgres.py
(+198 files in other folders)
