[project]
name = "agentic-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gitingest>=0.3.1",
    "html2text>=2025.4.15",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "python-dotenv>=1.1.1",
    "yt-dlp>=2025.9.23",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic[email]>=2.9.0",
    "mcp>=1.2.0",
    "requests>=2.32.3",
    "pycryptodome>=3.23.0",
    "googlesearch-python>=1.3.0",
    "langgraph>=1.0.1",
]

[project.scripts]
agentic-api-run = "app.run:run"
agentic-mcp = "mcp_server.server:run"
